rename n move vscode

--- a/UngradedAssignment1/TableSofa.ipynb
+++ b/UngradedAssignment1/TableSofa.ipynb
@@ -423,7 +423,7 @@
         "outputId": "19d9f8c7-f287-479f-c1b3-a552d4f4871b"
       },
       "source": [
-        "interp.most_confused(min_val=2)"
+        "# Print what is most confused","interp.most_confused(min_val=2)"
       ],
       "execution_count": 10,
       "outputs": [
